Disqus needs to be a global setting that Themes should be configured to obey, not vice versa

--- a/protected/modules/dashboard/assets/css/src/preview.css
+++ b/protected/modules/dashboard/assets/css/src/preview.css
@@ -101,6 +101,13 @@ main .post-metadata-inner .row.comments {
 	color: #A7CE44;
 }
 
+main .post-metadata-inner .comment-count-sp {
+	color: #A7CE44 !important;
+	cursor: default !important;;
+	text-decoration: none !important;;
+	font-weight: bold !important;;
+}
+
 main .post-metadata-inner .row.likes {
 	color: #CE4444;
 }
