CSS should look pretty with Disqus

--- a/protected/modules/dashboard/assets/css/dashboard.css
+++ b/protected/modules/dashboard/assets/css/dashboard.css
@@ -348,6 +348,10 @@ main #comments {
   padding: 10px;
 }
 
+main #disqus_thread {
+    padding: 10px;
+}
+
 main .comment-box-main {
     height: 94%;
     min-height: 94%;
