--- a/protected/modules/dashboard/assets/css/src/comments.css
+++ b/protected/modules/dashboard/assets/css/src/comments.css
@@ -3,6 +3,10 @@ main #comments {
   padding: 10px;
 }
 
+main #disqus_thread {
+    padding: 10px;
+}
+
 main .comment-box-main {
     height: 94%;
     min-height: 94%;
