Updating YII_DEBUG so that it displays CWebLogRoute when trace is set to 3

--- a/protected/modules/dashboard/assets/css/dashboard.css
+++ b/protected/modules/dashboard/assets/css/dashboard.css
@@ -951,6 +951,13 @@ input[type="range"]::-ms-fill-lower {
   margin-left: -7px;
 }
 
+.yiiLog {
+  float: left;
+  position: absolute;
+  left: 0;
+  top: 100%;
+}
+
 section.hbox {
     display: table;
     table-layout: fixed;
