Enabling new Analytics.js providers

--- a/protected/modules/dashboard/assets/css/src/preview.css
+++ b/protected/modules/dashboard/assets/css/src/preview.css
@@ -323,6 +323,7 @@ main .preview .preview-header .icon-eye-open,
 main .preview .preview-header .icon-comment,
 main .body-content .icon-trash,
 main .editor .icon-camera,
+main .body-content .icon-eye-open,
 main .content-container .icon-gear {
 	position: relative;
 	top: 5px;
