--- a/protected/modules/dashboard/assets/css/dashboard.css
+++ b/protected/modules/dashboard/assets/css/dashboard.css
@@ -344,7 +344,7 @@ main .dh-settings-container .sidebar .menu li a {
 }
 
 main .pure-button-xsmall {
-    top: -13px;
+    margin-top: -13px;
     margin-left: 5px;
 }
 
