Having a SendGrid account makes testing stuff like emails SO MUCH easier.

--- a/protected/modules/dashboard/assets/css/dashboard.css
+++ b/protected/modules/dashboard/assets/css/dashboard.css
@@ -343,7 +343,7 @@ main .dh-settings-container .sidebar .menu li a {
     text-decoration: none;
 }
 
-main .pure-button-xsmall {
+main .pure-button-link-xs {
     margin-top: -13px;
     margin-left: 5px;
 }
