Dashboard has been de-coupled from Twitter Bootstrap module
Some components from Twiter Bootstrap are still required (eg CiiActiveForm), the
necessary components from Tb have been moved directly into Cii

--- a/protected/modules/dashboard/assets/css/src/navigation.css
+++ b/protected/modules/dashboard/assets/css/src/navigation.css
@@ -98,6 +98,7 @@ aside.navigation nav {
 
 aside.navigation nav ul {
     list-style: none;
+    padding-left: 0;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
