--- a/protected/modules/dashboard/assets/css/dashboard.css
+++ b/protected/modules/dashboard/assets/css/dashboard.css
@@ -45,6 +45,7 @@ main .dashboard .header .content a {
     font-weight: 600;
     text-transform: uppercase;
     padding: 0 10px;
+    text-decoration: none;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     -ms-transition: all .2s ease-in-out;
@@ -1147,6 +1148,7 @@ aside.navigation nav {
 
 aside.navigation nav ul {
     list-style: none;
+    padding-left: 0;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
