--- a/themes/default/assets/css/src/pureforms.css
+++ b/themes/default/assets/css/src/pureforms.css
@@ -7,3 +7,19 @@
 .pure-form button {
     font-family: 'Source Sans Pro', Arial, Helvetica, sans !important;
 } 
+
+.pure-button-xsmall {
+    font-size: 70%;
+}
+
+.pure-button-small {
+    font-size: 85%;
+}
+
+.pure-button-large {
+    font-size: 110%;
+}
+
+.pure-button-xlarge {
+    font-size: 125%;
+}
