Added Migration to register with CiiMS.org. Instance ID is now shown in the dashboard

--- a/protected/modules/dashboard/assets/css/dashboard.css
+++ b/protected/modules/dashboard/assets/css/dashboard.css
@@ -2120,6 +2120,13 @@ main .error-container {
 	padding: 5%;
 }
 
+main .center {
+    margin: 0 auto;
+    text-align: center;
+    float:none;
+}
+
+
 
 /*
  * CSS TOGGLE SWITCHES
