--- a/protected/modules/dashboard/assets/css/src/cards.css
+++ b/protected/modules/dashboard/assets/css/src/cards.css
@@ -349,7 +349,14 @@ main .pure-button-link-xs {
     margin-left: 5px;
 }
 
-
 main .pure-form .pure-search-alt {
     margin-top: 8px;
+}
+
+main .text-small-inline {
+    margin-top: -9px !important;
+}
+
+main .installing {
+    margin-left: 5px;
 }
