--- a/protected/modules/dashboard/assets/css/src/settings.css
+++ b/protected/modules/dashboard/assets/css/src/settings.css
@@ -451,3 +451,8 @@ main .center {
 main .no-items-notification {
 	font-size: 12px;
 }
+
+main .carousel-container {
+    min-height: 335px;
+    margin: auto;
+}
