--- a/themes/default/assets/css/theme.css
+++ b/themes/default/assets/css/theme.css
@@ -429,6 +429,7 @@ body {
 	position: relative;
 	top: -15px;
 	box-shadow: 0 0 4px rgba(0, 0, 0, .3);
+	background:#f7f7f7;
 }
 
 header#top-header {
