--- a/protected/extensions/cii/assets/css/ciimscomments.css
+++ b/protected/extensions/cii/assets/css/ciimscomments.css
@@ -6,6 +6,11 @@
 	border-bottom: none;
 }
 
+#ciims_comments h3 {
+	margin-top: 0px;
+	padding-top: 0px;
+}
+
 .comment.template {
 	display: none;
 }
@@ -57,3 +62,31 @@
 .comment .comment_body .comment_body_inner {
 	font-size: 14px;
 }
+
+.comment .comment_box {
+	height: auto;
+	transition: all 0.5s ease-in-out;
+	height: 35px;
+	float: left;
+}
+
+.comment .comment_box.pure-focus {
+	height: 100px;
+	font-size: 12px;
+	transition: all 0.5s ease-in-out;
+}
+
+.comment .comment_box.error {
+	border: 1px solid rgb(202, 60, 60);
+	transition: all 0.5s ease-in-out;
+}
+
+.comment .comment_button {
+	margin-top: 10px;
+}
+
+.comment .cancel_button {
+	margin-top: 10px;
+	margin-right: 10px;
+}
+
