--- a/protected/modules/dashboard/assets/css/src/comments.css
+++ b/protected/modules/dashboard/assets/css/src/comments.css
@@ -1,8 +1,11 @@
-main #comments {
+main #comment {
   height: 100%;
-  padding: 10px;
+  padding: 15px;
 }
 
 main #disqus_thread {
     padding: 10px;
+}
+main .comment_body {
+	width: 78% !important;
 }
