--- a/protected/modules/dashboard/assets/css/src/comments.css
+++ b/protected/modules/dashboard/assets/css/src/comments.css
@@ -1,11 +1,14 @@
 main #comment {
-  height: 100%;
+  height: 90%;
   padding: 15px;
+  overflow:hidden;
 }
 
-main #disqus_thread {
+main #disqus_thread,
+main #ciims_comments {
     padding: 10px;
 }
+
 main .comment_body {
 	width: 78% !important;
 }
