--- a/protected/modules/dashboard/assets/css/src/comments.css
+++ b/protected/modules/dashboard/assets/css/src/comments.css
@@ -12,3 +12,13 @@ main #ciims_comments {
 main .comment_body {
 	width: 78% !important;
 }
+
+main #ciims_comments .comment_body_inner form {
+	padding: 0;
+	margin: 0;
+}
+
+main #ciims_comments .comment_body_inner form input,
+main #ciims_comments .comment_body_inner form a {
+	font-size: 11px;
+}
